# factorytown

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build-fandom-wiki.sh  download_fandom_data.sh  extract_wikitext.sh  factory_town_urls.txt  scrape.sh
src/factorytown/: __main__.py  common.py  internal_types.py  proj_dir.py  version.py
src/factorytown/cli/: __main__.py  cli.py
src/factorytown/mdparse/: __init__.py  mdparse.py
src/factorytown/model/: __init__.py  building.py  coins.py  entity.py  game_object.py  grid_dim.py  item.py  model.py  recipe.py  registry.py  research.py  util.py
src/factorytown/model_scrape/: __init__.py  buildings.py  coins.py  model_scrape.py  util.py
src/factorytown/raw_scrape/: __init__.py  factorytown_wiki_scrape.py
src/factorytown/scrape/: __init__.py  buildings_page.py  factorytown_wiki_scrape.py  fandom_scrape.py
src/factorytown/test/: __init__.py
src/factorytown/webscraper/: common.py
