[project]
name = "factorytown"
version = "0.1.0"
description = "commandline tool for working with factorytown game"
authors = [
    {name = "Sam McKelvie", email = "dev@mckelvie.org"},
]
dependencies = [
    "wikitextparser>=0.56.2",
    "mwparserfromhell>=0.6.6",
    "requests>=2.32.3",
    "fandom-py>=0.2.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
factorytown = {call = "factorytown.cli.cli:run"}

[project.scripts]
factorytown = "factorytown.cli.cli:run"
